# ros-pickandplace

./: README.md
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: joint_names.yaml  motion_interface.yaml  urdf.rviz  vision.rviz
src/robot_description/launch/: robot_interface_streaming.launch  robot_rviz.launch
src/robot_description/urdf/: arm_macro.xacro  hand.urdf.xacro  hand_robot.urdf.xacro  materials.urdf.xacro  robot.urdf.xacro  robot.xacro  torso_macro.xacro
src/robot_gazebo/: CMakeLists.txt  package.xml
src/robot_gazebo/config/: arm_controller.yaml  joint_state_controller.yaml  left_hand_controller.yaml  right_hand_controller.yaml
src/robot_gazebo/launch/: depth_img_processing.launch  load_robot.launch  robot_control.launch  robot_gazebo.launch  robot_vision.launch
src/robot_gazebo/worlds/: robot.world
src/robot_moveit_config/: .setup_assistant  package.xml
src/robot_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_kinect_depthmap.yaml  sensors_kinect_pointcloud.yaml  zeal_robot.srdf
src/robot_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_planning_execution_invite_gazebo.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  zeal_robot_moveit_sensor_manager.launch.xml
src/robot_moveit_config/scenes/: pickandplace.scene
src/robot_moveit_config/src/: bag_publisher_maintain_time.cpp
src/robot_planning/: CMakeLists.txt  package.xml
src/robot_planning/launch/: move_group_interface_tutorial.launch  move_group_python_interface_tutorial.launch  pick_and_place_tutorial.launch
src/robot_planning/scripts/: moveit_pick_and_place_demo.py
src/robot_planning/src/: robot_move_group_interface.cpp  robot_pick_and_place.cpp
src2/motoman_csda10f_support/urdf/: common_torso_macro.xacro  right_hand_robot.urdf.xacro
src2/robot_description/config/: default_config.rviz
src2/robot_description/launch/: robot_interface_streaming_csda10f.launch  test_csda10f.launch  test_left_gripper.launch  test_right_gripper.launch
src2/robot_description/maps/: map.pgm  map2.pgm  map2.yaml
src2/robot_description/urdf/: invite_csda10f.urdf  invite_csda10f.xacro  left_gripper_macro.xacro  left_hand_robot.urdf.xacro  right_gripper.xacro
src2/robot_gazebo/launch/: invite_motoman_control.launch
src2/robot_gazebo/urdf/: invite_csda10f.xacro  right_gripper_macro.xacro
src2/robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src2/robot_moveit_config/config/: fake_controllers.yaml  motoman_csda10f.srdf
src2/robot_moveit_config/launch/: move_group.launch  moveit.rviz  planning_context.launch  sensor_manager.launch.xml
src2/robot_moveit_config/scenes/: default_scene_objects.scene  default_scene_objects0.scene  default_scene_objects2.scene
src2/robot_planning/: package.xml
src2/robot_planning/launch/: move_group_python_interface_tutorial.launch
src2/robot_planning/src/: invite_pick_and_place.cpp  invite_pick_and_place_revise.cpp
src2/robotiq_2f_model/model/: robotiq_2f_85.urdf.xacro
src3/: readme.md
src3/motoman_csda10f_support/urdf/: arm_macro.xacro  common_torso_macro.xacro
src3/robot_camera/: CMakeLists.txt  package.xml
src3/robot_camera/launch/: load_sence_test.launch
src3/robot_camera/src/: client.cpp  client0.cpp  client1.cpp  client2.cpp  client3.cpp  client4.cpp  client5.cpp  client6.cpp  client7.cpp  client8.cpp  server.cpp  test_client.cpp
src3/robot_camera/srv/: object_struct_sc.srv
src3/robot_description/: CMakeLists.txt  package.xml
src3/robot_description/launch/: robot_state_visualize_csda10f.launch
src3/robot_description/maps/: map.yaml  map3.pgm
src3/robot_description/urdf/: invite_csda10f.xacro  left_gripper.xacro  right_gripper_macro.xacro
src3/robot_eyes/: CMakeLists.txt  README.md  package.xml
src3/robot_eyes/config/: rs200_config.rviz
src3/robot_eyes/config/gazebo_worlds/: tabletop.sdf  test.sdf
src3/robot_eyes/launch/: csda10f_rs200_simulation.launch  depth_img_processing.launch  pointcloud_pre_processing.launch  rs200_simulation.launch  tabletop_test.launch  voxelgrid_downsample.launch
src3/robot_eyes/msg/: SegmentedCloud.msg
src3/robot_eyes/nodelets_descriptions/: CloudColorer.xml
src3/robot_eyes/src/common/: cloud_colorer.cpp
src3/robot_eyes/src/examples/: example.cpp  example_voxelgrid.cpp  simple_plane_segmentation.cpp
src3/robot_eyes/src/nodelets/: PlaneSegmenter.cpp
src3/robot_eyes/urdf/: csda10f_test.xacro  realsense-RS200.macro.xacro  realsense_rs200.macro.xacro  rs200_simulation.xacro
src3/robot_gazebo/: CMakeLists.txt  package.xml
src3/robot_gazebo/launch/: invite_motoman_gazebo.launch  invite_test_vision.launch  load_invite_motoman.launch
src3/robot_gazebo/urdf/: csda10f_with_vision.xacro  left_gripper_macro.xacro
src3/robot_gazebo/worlds/: invite_room.world
src3/robot_moveit_config/config/: controllers.yaml  joint_limits.yaml  kinematics.yaml  motoman_csda10f.srdf
src3/robot_moveit_config/launch/: demo.launch  motoman_csda10f_moveit_controller_manager.launch.xml  motoman_csda10f_moveit_sensor_manager.launch.xml  moveit.rviz  moveit_planning_execution.launch  moveit_planning_execution_invite_gazebo.launch  trajectory_execution.launch.xml  warehouse.launch
src3/robot_moveit_config/scenes/: default_scene_objects.scene  default_scene_objects1.scene  default_scene_objects3.scene  default_scene_objects4.scene
src3/robot_planning/: CMakeLists.txt
src3/robot_planning/launch/: move_group_interface_tutorial.launch  pick_and_place_tutorial.launch
src3/robot_planning/meshes/: cubetoy.stl
src3/robot_planning/src/: invite_pick_and_place.cpp  (+1 more)
(+17 files in other folders)
