<?xml version="1.0"?>
<package format="2">
  <name>robot_eyes</name>
  <version>0.1.0</version>
  <description>The robot_eyes package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="danfoa@todo.todo">danfoa</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>libpcl-all-dev</depend>
  <depend>libpcl-all</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nodelet plugin="${prefix}/nodelets_descriptions/CloudColorer.xml"/>
  </export>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>